<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="historyAdapter"
            type="com.daws.projects.codamation.adapters.SimpleRecyclerAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultBackground">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            app:elevation="0dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:contentScrim="@color/colorPrimary"
                app:statusBarScrim="@color/colorPrimary">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:padding="@dimen/_10sdp">
                    <LinearLayout
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/_10sdp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_chevron_left"
                            android:tint="@color/colorPrimary"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/title_local_growth"/>
                </RelativeLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/title_graphic_daily_growth"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/caseHistory"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_height="@dimen/_125sdp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_4sdp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_circle" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textSize="@dimen/_8ssp"
                        android:text="Kasus Baru"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/title_graphic_daily_action"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/caseActivity"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_height="@dimen/_125sdp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_4sdp"
                        app:srcCompat="@drawable/ic_circle" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textSize="@dimen/_8ssp"
                        android:text="Positif"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_4sdp"
                        app:srcCompat="@drawable/ic_circle"
                        android:tint="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textSize="@dimen/_8ssp"
                        android:text="Sembuh"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_4sdp"
                        app:srcCompat="@drawable/ic_circle"
                        android:tint="@color/error"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_8ssp"
                        android:text="Meninggal"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/title_history_case_local"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:adapter="@{historyAdapter}"
                    app:setupVerticalRecyclerView="@{@dimen/_10sdp}"
                    tools:listitem="@layout/item_daily_history"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>