<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <import type="com.daws.projects.codamation.helpers.TextHelper"/>
        <variable
            name="listener"
            type="com.daws.projects.codamation.views.fragments.DashboardFragment.DashboardFragmentListener" />
        <variable
            name="indonesiaModel"
            type="com.daws.projects.codamation.models.SummaryGlobalCaseModel" />
        <variable
            name="globalModel"
            type="com.daws.projects.codamation.models.SummaryGlobalCaseModel" />
        <variable
            name="newsAdapter"
            type="com.daws.projects.codamation.adapters.SimpleRecyclerAdapter" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/defaultBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat = "@drawable/header_layout"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosans_bold"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/title_corona_case_data"
                    android:textColor="@color/textDarkerGrey"
                    android:textSize="@dimen/_16ssp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosans_bold"
                            android:text="@string/title_indonesia"
                            android:textSize="@dimen/_12ssp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Terakhir diupdate 24 Maret"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@color/textGrey"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:onClick="@{()->listener.onLocalDetailClick()}">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:fontFamily="@font/nunitosans_bold"
                            android:text="@string/title_see_detail"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_10ssp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:srcCompat="@drawable/ic_arrow_right"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/roundrect_all_fill_white_outline_white"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_positive"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(indonesiaModel.confirmed)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/pending"
                            tools:text="999,999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Positif"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_recover"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(indonesiaModel.recovered)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/colorPrimary"
                            tools:text="999,999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sembuh"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_death"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(indonesiaModel.death)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/error"
                            tools:text="999,999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Meninggal"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosans_bold"
                            android:text="@string/title_worldwide"
                            android:textSize="@dimen/_12ssp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Terakhir diupdate 24 Maret"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@color/textGrey"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:onClick="@{()->listener.onGlobalDetailClick()}">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_2sdp"
                            android:fontFamily="@font/nunitosans_bold"
                            android:text="@string/title_see_detail"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_10ssp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:srcCompat="@drawable/ic_arrow_right"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/roundrect_all_fill_white_outline_white"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_positive"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(globalModel.confirmed)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/pending"
                            tools:text="999,9999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Positif"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_recover"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(globalModel.recovered)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/colorPrimary"
                            tools:text="999,999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sembuh"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_case_death"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_20ssp"
                            android:text="@{TextHelper.newInstance().separatorValue(globalModel.death)}"
                            android:fontFamily="@font/nunitosans_bold"
                            android:textColor="@color/error"
                            tools:text="999,999"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Meninggal"
                            android:textColor="@color/textGrey"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="Berita Terkait"
                    android:textSize="@dimen/_12ssp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:padding="@dimen/_10sdp"
                    android:adapter="@{newsAdapter}"
                    app:setupVerticalRecyclerView="@{@dimen/_10sdp}"
                    tools:listitem="@layout/item_news"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>